@@ -5,6 +5,8 @@ Set default focus to subtitles
 Minor tweak to simple home - submenu on click up from submenu closes it
 Fix lovefilm in sets - no item preload so reports right page number
 Fix broken addon text overlapping
+Fix choose art option for episodes
+Add scrolling text to panel list focused item
 
 [B]0.4.2[/B]
 Altered mixed widget scroll behaviour to be up for simple and down for panel
